--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
 
 <p>The technique chosen as a first atempt to synthesize the cajon drum sounds is based on modal analysis and coupled mode synthesis [4,5]. The geometry of the drum is basically that of a helmholtz resonator with a vibrating plate as the excitation of the system. The resonant frequency of a helmholtz resonator is given by the expression:</p>
 
+<p><img src="images/freshelmholtz.png" alt="Resonance Frequency"></p>
+
 <p>Also the frequency response measured in [1] for the transfer function is: </p>
 
 <p>And the sound pressure level at the hole in the back plate is:</p>
