--- a/index.html
+++ b/index.html
@@ -54,9 +54,17 @@
 
 <p><img src="images/freshelmholtz.png" alt="Resonance Frequency"></p>
 
+<p>where v is the speed of sound, A is the area of the duct, Vo is the volume of the box and Leq is the equivalent length of the duct.</p>
+
 <p>Also the frequency response measured in [1] for the transfer function is: </p>
 
+<p><img src="images/freq_response.gif" alt="Frequency response"></p>
+
+
 <p>And the sound pressure level at the hole in the back plate is:</p>
+
+<p><img src="images/spl_cajon.gif" alt="Sound Pressure Level"></p>
+
 
 <p>This information suggests that we can attempt to synthesize the sounds from the exponentially decaying sinusoids originated by the vibrating modes from the instrument. These can be modeled as a second order digital filter of the form: </p>
 
