--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@
 
 <p>This information suggests that we can attempt to synthesize the sounds from the exponentially decaying sinusoids originated by the vibrating modes from the instrument. These can be modeled as a second order digital filter of the form: </p>
 
+<p><img src="images/diffeq.gif" alt="Resonance Frequency"></p>
+
 <p>In our case we are going to make use of three second order digital filters to match the vibrating modes of the plate and the resonant mode of the Helmholtz resonator. The values of the complex poles depend on the bandwidth B and resonant frequency of each of them. For the cajon drum, depending on its size and hole diameter, the first resonance frequency is around 90Hz. Also the first resonant mode of the front face is around 200 Hz depending on the size. These two modes are the most important in the generation of the most characteristic sound of the cajon drum which is when it is strummed in the center of the front plate. </p>
 
 <p>The simulation was implemented in Matlab and the following audio files were generated:</p>
