--- a/index.html
+++ b/index.html
@@ -72,9 +72,14 @@
 
 <p>In our case we are going to make use of three second order digital filters to match the vibrating modes of the plate and the resonant mode of the Helmholtz resonator. The values of the complex poles depend on the bandwidth B and resonant frequency of each of them. For the cajon drum, depending on its size and hole diameter, the first resonance frequency is around 90Hz. Also the first resonant mode of the front face is around 200 Hz depending on the size. These two modes are the most important in the generation of the most characteristic sound of the cajon drum which is when it is strummed in the center of the front plate. </p>
 
-<p>The simulation was implemented in Matlab and the following audio files were generated:</p>
+<p>The simulation was implemented in Matlab (code in the repository of this project) and the following audio files were generated:</p>
 
-<p>We also made measurements of the damped (filled with absorptive material) drum in order to obtain an excitation signal for our resonant filters.</p>
+
+<p>Real sounds of the drum cajon can be listened here:</p>
+
+<a href="alexnieva.github.io/CAJON_SAMPLE_REAL1.wav">Cajon drum sound *.wav</a>
+
+<p>In order to obtain an excitation signal for our resonant filters, we made measurements of the damped (filled with absorptive material) drum .</p>
 
 <h1>
 <a id="discussion" class="anchor" href="#discussion" aria-hidden="true"><span class="octicon octicon-link"></span></a>Discussion</h1>
