--- a/index.html
+++ b/index.html
@@ -74,6 +74,8 @@
 
 <p>The simulation was implemented in Matlab (code in the repository of this project) and the following audio files were generated:</p>
 
+<p><img src="images/fresp_filters.png" alt="Resonances of filters"></p>
+
 <p><a href="alexnieva.github.io/cajon1.wav">Synthesized sound with 1 resonance wav</a></p>
 
 <p><a href="alexnieva.github.io/cajon2.wav">Synthesized sound with 3 resonances wav</a></p>
