--- a/index.html
+++ b/index.html
@@ -76,7 +76,14 @@
 
 <p><img src="images/fresp_filters.png" alt="Resonances of filters"></p>
 
-<p><a href="alexnieva.github.io/cajon1.wav">Synthesized sound with 1 resonance wav</a></p>
+<p>Synthesized sound with 1 resonance - wav file</p>
+
+<audio controls>
+  <source src="cajon1.wav" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
+
+
 
 <p><a href="alexnieva.github.io/cajon2.wav">Synthesized sound with 3 resonances wav</a></p>
 
@@ -86,7 +93,7 @@
 
 <p><a href="alexnieva.github.io/CAJON_SAMPLE_REAL1.wav">Cajon drum sound wav</a></p>
 
-<p>In order to obtain an excitation signal for our resonant filters, we made measurements of the damped (filled with absorptive material) drum .</p>
+<p>In order to obtain an excitation signal for the resonant filters, we made dry measurements of the damped (filled with absorptive material) cajon drum using a condenser microphone (Audio Technica AT2020 fairly flat frequency response). Unfortunately this cajon drum had snares. A better excitation signal would have to be recorded using a cajon drum without those additions.</p>
 
 <h1>
 <a id="discussion" class="anchor" href="#discussion" aria-hidden="true"><span class="octicon octicon-link"></span></a>Discussion</h1>
