using audio players

--- a/index.html
+++ b/index.html
@@ -76,22 +76,32 @@
 
 <p><img src="images/fresp_filters.png" alt="Resonances of filters"></p>
 
-<p>Synthesized sound with 1 resonance - wav file</p>
+<p>Synthesized sound with 1 resonance - wave file</p>
 
 <audio controls>
   <source src="cajon1.wav" type="audio/mpeg">
   Your browser does not support the audio element.
 </audio>
 
-
-
-<p><a href="alexnieva.github.io/cajon2.wav">Synthesized sound with 3 resonances wav</a></p>
+<p>Synthesized sound with 3 resonances - wave file</p>
+<audio controls>
+  <source src="cajon2.wav" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
 
 <p>Real sounds of the drum cajon can be listened here:</p>
 
-<p><a href="alexnieva.github.io/CAJON_SAMPLE_BACK_UD2.wav">Cajon drum sound with snares wav</a></p>
+<p>Cajon drum sound with snares - wave file</p>
+<audio controls>
+  <source src="CAJON_SAMPLE_BACK_UD2.wav" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
 
-<p><a href="alexnieva.github.io/CAJON_SAMPLE_REAL1.wav">Cajon drum sound wav</a></p>
+<p>Cajon drum sound - wave file</p>
+<audio controls>
+  <source src="CAJON_SAMPLE_REAL1.wav" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
 
 <p>In order to obtain an excitation signal for the resonant filters, we made dry measurements of the damped (filled with absorptive material) cajon drum using a condenser microphone (Audio Technica AT2020 fairly flat frequency response). Unfortunately this cajon drum had snares. A better excitation signal would have to be recorded using a cajon drum without those additions.</p>
 
